# macos_keychain

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
macos_keychain/: __init__.py  main.py
