[tool.poetry]
name = "macos_keychain"
version = "0.1.0"
description = "A Simple MacOS Keychain Store"
authors = ["Juan Gonzalez <jrg2156@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
sh = "^1.12"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
